[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Sprites/PortadaByMaetschl.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Torch.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Sprites/BackgroundBricks.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Buttons/Button13.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Buttons/Button11.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Buttons/Button12.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Buttons/Button2.png" type="Texture" id=7]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=8]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="Animation" id=2]
resource_name = "Normal"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 640, 260 ), Vector2( 640, 240 ) ]
}

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( -424.309, -304.154, -424.672, -295.441, -464.242, -283.825, -475.133, -245.344, -483.846, -245.344, -484.427, 244.578, -475.714, 244.578, -464.46, 283.059, -425.979, 294.313, -425.397, 304.71, 425.471, 304.388, 424.607, 295.322, 463.462, 274.599, 485.047, 243.947, 484.656, -244.074, 465.66, -245.369, 454.867, -274.726, 425.942, -295.016, 426.374, -304.946 )

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 1

[node name="MainMenu" type="Node2D"]
script = ExtResource( 8 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.03, 0.17, 0.29, 1 )

[node name="Ligths" type="Node2D" parent="."]

[node name="Torch" parent="Ligths" instance=ExtResource( 2 )]
position = Vector2( 210, 150 )

[node name="Torch2" parent="Ligths" instance=ExtResource( 2 )]
position = Vector2( 210, 570 )

[node name="Torch3" parent="Ligths" instance=ExtResource( 2 )]
position = Vector2( 1070, 570 )

[node name="Torch4" parent="Ligths" instance=ExtResource( 2 )]
position = Vector2( 1070, 150 )

[node name="PortadaByMaetschl" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 640, 253.511 )
scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="PortadaByMaetschl"]
autoplay = "Normal"
anims/Normal = SubResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="PortadaByMaetschl"]
occluder = SubResource( 3 )

[node name="Torch6" parent="PortadaByMaetschl" instance=ExtResource( 2 )]
position = Vector2( -252.236, 149.203 )
scale = Vector2( 3.07692, 3.07692 )

[node name="Torch5" parent="PortadaByMaetschl" instance=ExtResource( 2 )]
position = Vector2( 255.61, -157.055 )
scale = Vector2( 3.07692, 3.07692 )

[node name="Buttons" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="TextureButton" parent="Buttons"]
material = SubResource( 4 )
margin_left = 700.0
margin_top = 490.0
margin_right = 860.0
margin_bottom = 650.0
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="TextureButton" parent="Buttons"]
material = SubResource( 4 )
margin_left = 440.0
margin_top = 490.0
margin_right = 600.0
margin_bottom = 650.0
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="TextureButton" parent="Buttons"]
material = SubResource( 4 )
margin_left = 1130.49
margin_top = 575.729
margin_right = 1290.49
margin_bottom = 735.729
rect_scale = Vector2( 0.75, 0.75 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="Buttons"]
material = SubResource( 4 )
margin_left = 36.0
margin_top = 36.0
margin_right = 196.0
margin_bottom = 196.0
rect_scale = Vector2( 0.75, 0.75 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Buttons/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Buttons/Exit" to="." method="_on_Exit_pressed"]
